Stuck and cont figure out why my radio input is not updating correctly.

--- a/src/components/solid/forms/inputs/RadioInput/RadioOption.module.css
+++ b/src/components/solid/forms/inputs/RadioInput/RadioOption.module.css
@@ -1,4 +1,5 @@
 .label_container {
+  position: relative;
   display: grid;
   grid-template-columns: min-content 1fr;
   justify-items: start;
@@ -7,10 +8,10 @@
   font-size: 1.8rem;
   color: var(--font-color-light);
   font-weight: 700;
-  line-height: 1.5;
+  border: 1px solid red;
   cursor: pointer;
-  -webkit-tap-highlight-color: transparent;
   transition: color 300ms ease-in-out;
+  isolation: isolate;
 }
 
 .label_container:focus {
@@ -36,9 +37,12 @@
 }
 
 .radio_input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   visibility: hidden;
   margin: 0;
-  width: 100%;
-  height: 100%;
   z-index: 1;
 }
